fix: 15px header top-margin on small screens only

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,17 +19,18 @@
 // === Header ===
 .fa-code {
   color: $primary-color;
-  margin-right: -20px;
-  @include small-screens {
-    font-size: 60px;
-  }
+  margin-right: -30px;
+  // @include small-screens {
+  //   font-size: 20px;
+  // }
 }
 
 .name {
   @include headings-style;
-  margin-top: 15px;
+  margin-top: 10px;
   @include small-screens {
-    font-size: 32px;
+    font-size: 30px;
+    margin-top: 15px;
   }
 }
 
